syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "block.proto";
import "chain_metadata.proto";
import "types.proto";
import "transaction.proto";

package tari.base_node;

enum TxSubmissionRejectionReason {
    TxSubmissionRejectionReasonNone = 0;
    TxSubmissionRejectionReasonAlreadyMined = 1;
    TxSubmissionRejectionReasonDoubleSpend = 2;
    TxSubmissionRejectionReasonOrphan = 3;
    TxSubmissionRejectionReasonTimeLocked = 4;
    TxSubmissionRejectionReasonValidationFailed = 5;
}

message TxSubmissionResponse {
    bool accepted = 1;
    TxSubmissionRejectionReason rejection_reason = 2;
    bool is_synced = 3;
}

enum TxLocation {
    TxLocationNone = 0;
    TxLocationNotStored = 1;
    TxLocationInMempool = 2;
    TxLocationMined = 3;
}

message TxQueryResponse {
    TxLocation location = 1;
    google.protobuf.BytesValue block_hash = 2;
    uint64 confirmations = 3;
    bool is_synced = 4;
    uint64 height_of_longest_chain = 5;
}

message TxQueryBatchResponse {
    tari.types.Signature signature = 1;
    TxLocation location = 2;
    google.protobuf.BytesValue block_hash = 3;
    uint64 confirmations = 4;
}

message TxQueryBatchResponses {
    repeated TxQueryBatchResponse responses = 1;
    bool is_synced = 2;
}

message FetchMatchingUtxos {
    repeated bytes output_hashes = 1;
}

message FetchUtxosResponse {
    repeated tari.types.TransactionOutput outputs = 1;
    bool is_synced = 2;
}

message TipInfoResponse {
    ChainMetadata metadata = 1;
    bool is_synced = 2;
    // The last known reorg metadata information
    ReorgInfo reorg_info = 3;
}

message ReorgInfo {
    // The tip hash of the last reorg chain
    bytes last_reorg_best_block = 1;
    // The number of blocks contained in the last reorg
    uint64 num_blocks_reorged = 2;
    // The tip height the chain was at after the last reorg
    uint64 tip_height = 3;
}

